--- a/styles.css
+++ b/styles.css
@@ -42,9 +42,10 @@ footer {
 }
 
 #portfolio p {
-    padding: 0rem 2.5rem;
-    font-size: 1.2rem;
-    margin-bottom: 6rem;
+    padding: 0rem 2rem;
+    font-size: 1rem;
+    margin-bottom: 4rem;
+    margin-top: .5rem;
 }
 
 #portfolio p:last-child {
@@ -61,7 +62,7 @@ h1, h2, nav, footer {
 }
 
 #contact-info {
-    margin-top: 3rem;
+    margin-top: 2.25rem;
 }
 
 nav, h2 {
@@ -73,7 +74,8 @@ nav, h2 {
 }
 
 h3 {
-    margin-top: 2rem;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
 }
 
 a {
