--- a/css/styles.css
+++ b/css/styles.css
@@ -110,3 +110,26 @@ footer {
     display: none;
 }
 
+
+/* ===========================================================
+            Media Queries
+============================================================= */
+
+@media screen and (min-width: 768px) {
+
+    #main-nav {
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 50%;
+    }
+/* 
+    #profile-image {
+        width: 30%;
+    }
+
+    #home {
+        flex-direction: row;
+        flex-wrap: wrap;
+    } */
+
+}
