--- a/css/styles.css
+++ b/css/styles.css
@@ -122,14 +122,31 @@ footer {
         justify-content: space-between;
         max-width: 50%;
     }
-/* 
-    #profile-image {
+
+    /* #profile-image {
         width: 30%;
+        float: right;
     }
 
     #home {
         flex-direction: row;
-        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 90%;
+    }
+
+    #home p {
+        width: 60%;
     } */
+
+    #portfolio-projects {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .project {
+        width: 50%;
+    }
 
 }
