Formatted contact section for tablet
and fixed my negative top and bottom margin on portfolio section; was causing overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,11 @@ footer {
     }
 
     #portfolio {
-        margin: -5%;
+        margin: 0 -5%;
+    }
+
+    #contact {
+        padding: 0 7rem;
     }
 
 }
