--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     margin: 5%;
 }
 
-.flex-container {
+#main-nav, header {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -177,4 +177,46 @@ footer {
         display: none;
     }
 
+}
+
+@media screen and (min-width: 1024px) {
+    header {
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    h1 {
+        margin-right: auto;
+    }
+
+    #home {
+        margin-top: 5rem;
+        margin-bottom: 7rem;
+    }
+
+    .project {
+        width: 33%;
+    }
+
+    #main-nav {
+        display: inline-block;
+        width: unset;
+        max-width: unset;
+        margin: unset;
+    }
+
+    #main-nav a {
+        margin-left: 3rem;
+    }
+
+    #profile-image {
+        width: 40%;
+    }
+
+    #home {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 }
