Last touches to match mockup better
Mostly dealt with portfolio section's side margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,11 @@ img {
     padding: 10px 0;
 }
 
+
+#portfolio {
+    margin: 4rem -5%;
+}
+
 #portfolio p {
     padding: 0rem 2rem;
     font-size: 1rem;
@@ -76,13 +81,17 @@ img {
     margin-top: 3rem;
 }
 
+#portfolio h2 {
+    margin-top: 2.5rem;
+}
+
 #portfolio h2, #contact h2 {
-    margin-top: 3.5rem;
     margin-bottom: 3.5rem;
     font-size: 1.5rem;
 }
 
 #contact h2 {
+    margin-top: 3.5rem;
     margin-bottom: 1rem;
 }
 
@@ -160,10 +169,6 @@ footer {
         width: 50%;
     }
 
-    #portfolio {
-        margin: 4rem -5%;
-    }
-
     #contact {
         padding: 0 7rem;
     }
@@ -218,5 +223,10 @@ footer {
         display: flex;
         flex-direction: row;
         align-items: center;
+    }
+
+    #portfolio {
+        margin-right: -3%;
+        margin-left: -3%;
     }
 }
