Improving font sizes as screen widens

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ nav, h2 {
 }
 
 #main-nav {
-    width: 90%;
+    width: 95%;
 }
 
 #home {
@@ -36,9 +36,10 @@ nav, h2 {
 }
 
 #home p {
-    font-size: 1.25rem;
     text-align: center;
-}
+    /* max-height: 268px;
+    padding: 1.5rem 0; */
+} 
 
 h3 {
     margin-top: 1rem;
@@ -74,7 +75,6 @@ img {
 
 #portfolio p {
     padding: 0rem 2rem;
-    font-size: 1rem;
     margin-bottom: 4rem;
     margin-top: .5rem;
 }
@@ -131,6 +131,14 @@ footer {
     display: none;
 }
 
+p {
+    font-size: 1.2rem;
+}
+
+#portfolio p {
+    font-size: 1rem;
+}
+
 
 /* ===========================================================
             Media Queries
@@ -170,6 +178,10 @@ footer {
         flex-wrap: wrap;
     }
 
+    #portfolio p, p {
+        font-size: 1.2rem;
+    }
+
     .project {
         width: 50%;
     }
@@ -187,6 +199,9 @@ footer {
         display: none;
     }
 
+    #footer-nav, #footer-name {
+        font-size: 1.3rem;
+    }
 }
 
 
@@ -229,5 +244,9 @@ footer {
     #portfolio {
         margin-right: -3%;
         margin-left: -3%;
+    }
+
+    #portfolio p, p {
+        font-size: 1.5rem;
     }
 }
