--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,11 @@ nav, h2 {
     text-transform: uppercase;
 }
 
+#home h2 {
+    font-weight: unset;
+    text-transform: unset;
+}
+
 #main-nav {
     width: 95%;
     font-size: 1.3rem;
@@ -36,10 +41,8 @@ nav, h2 {
     flex-direction: column;
 }
 
-#home p {
+#home h2 {
     text-align: center;
-    /* max-height: 268px;
-    padding: 1.5rem 0; */
 } 
 
 h3 {
@@ -132,12 +135,8 @@ footer {
     display: none;
 }
 
-p {
+#portfolio p, #home h2, #contact p {
     font-size: 1.2rem;
-}
-
-#portfolio p {
-    font-size: 1rem;
 }
 
 
@@ -168,7 +167,7 @@ p {
         align-items: center;
     }
 
-    #home p {
+    #home h2 {
         text-align: left;
     }
 
@@ -179,8 +178,8 @@ p {
         flex-wrap: wrap;
     }
 
-    #portfolio p, p {
-        font-size: 1.2rem;
+    #portfolio p, #home h2, #contact p {
+        font-size: 1.3rem;
     }
 
     .project {
@@ -247,7 +246,7 @@ p {
         margin-left: -3%;
     }
 
-    #portfolio p, p {
+    #portfolio p, #home h2, #contact p {
         font-size: 1.5rem;
     }
 }
