Missed a CSS rule when changing #home p > #home h2

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ footer {
         background-color: unset;
     }
 
-    #profile-image, #home p {
+    #profile-image, #home h2 {
         width: 48%;
     }
     
