Added some img and link hover states

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,18 @@ body {
     margin: 5%;
 }
 
+#portfolio img {
+    transition: all 1s;
+}
+
+#portfolio img:hover {
+    transform: scale(1.1);
+}
+
+a:hover {
+    color: lightslategrey;
+}
+
 #main-nav, header {
     display: flex;
     flex-direction: column;
