--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,24 @@ img {
     font-size: 1.5rem;
 }
 
+#education h2 {
+    margin: 3rem auto 2rem;
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul li {
+    margin-bottom: 1rem;
+}
+
+#education, #contact {
+    max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 #contact h2 {
     margin-top: 3.5rem;
     margin-bottom: 1rem;
@@ -148,7 +166,7 @@ footer {
     display: none;
 }
 
-#portfolio p, #home h2, #contact p {
+#portfolio p, #home h2, #contact p, ul {
     font-size: 1.2rem;
 }
 
@@ -191,7 +209,7 @@ footer {
         flex-wrap: wrap;
     }
 
-    #portfolio p, #home h2, #contact p {
+    #portfolio p, #home h2, #contact p, ul {
         font-size: 1.3rem;
     }
 
@@ -259,7 +277,7 @@ footer {
         margin-left: -3%;
     }
 
-    #portfolio p, #home h2, #contact p {
+    #portfolio p, #home h2, #contact p, ul {
         font-size: 1.5rem;
     }
 }
