--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,10 @@ footer {
     font-size: 1.2rem;
 }
 
+h1, #footer-name {
+    font-family: 'Poppins', sans-serif;
+}
+
 
 /* ===========================================================
             Media Queries
