--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,7 @@ img {
 #profile-image {
     width: 70%;
     margin: 2rem auto;
-    /* margin-top: 3rem;
-    margin-bottom: 2rem; */
+
 }
 
 #portfolio, #main-nav a {
@@ -86,7 +85,7 @@ img {
 
 
 #portfolio {
-    margin: 4rem -5%;
+    margin: 4rem 0;
 }
 
 #portfolio p {
