Tried CSS over again; styled for 320px
Basically just commented out all CSS and rewrote from beginning, copying and pasting as I went. Kept code more organized with titles. Tried to style one thing at a time and leave spacing mostly for last. It worked much better. Will delete all the old code as I go. Maybe after media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,51 +5,43 @@
 }
 
 body {
-    text-align: center;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     background-color: whitesmoke;
     color: #576366;
+    text-align: center;
 }
 
-header, #education, #content, footer {
-    padding: 1rem;
+/* ~~~~~~~~~~~~~~~~~~ LINKS ~~~~~~~~~~~~~~~~~~~~~ */
+
+
+#main-nav {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 90%;
+    font-size: 1.3rem;
 }
 
-#home {
-    padding-left: 1rem;
-    padding-right: 1rem;
+#main-nav a, #portfolio {
+    background-color: ghostwhite;
 }
 
-section, footer {
-    margin-top: 3rem;
+#main-nav a {
+    padding: 0.75rem;
+    margin-top: 0.5rem;
+    text-align: center;
 }
 
-#home {
-    margin-top: 1rem;
-}
-
-#portfolio img {
-    transition: all 1s;
-}
-
-#portfolio img:hover {
-    transform: scale(1.1);
-}
-
-#portfolio-projects {
-    margin-right: auto;
-    margin-left: auto;
+a {
+    text-decoration: none;
+    color: #576366;
 }
 
 a:hover {
     color: lightslategrey;
 }
 
-#main-nav, header {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-}
+/* ~~~~~~~~~~~~~~~~~~ FONT STYLE, WEIGHT, UPPERCASE, AND EXCLUSIONS~~~~~~~~~~~~~~~~~~~~~ */
 
 h1, h2, nav, footer {
     font-weight: 800;
@@ -64,14 +56,160 @@ nav, h2 {
     text-transform: unset;
 }
 
-#main-nav {
-    width: 95%;
-    font-size: 1.3rem;
+#footer-name {
+    text-transform: unset;
 }
+
+h1, #footer-name {
+    font-family: 'Poppins', sans-serif;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ FONT SIZING ~~~~~~~~~~~~~~~~~~~~~ */
+
+p, ul, #home h2 {
+    font-size: 1.2rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ SPACING? ~~~~~~~~~~~~~~~~~~~~~ */
+
+header {
+    margin-top: 3rem;
+}
+
+section, footer {
+    margin: 2rem .5rem;
+    padding: 1rem;
+}
+
+h2 {
+    margin-bottom: 1rem;
+}
+
+footer h2, #home h2 {
+    margin-bottom: 0;
+}
+
+#portfolio h2 {
+    margin-bottom: 2.5rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ IMAGES ~~~~~~~~~~~~~~~~~~~~~ */
+
+img {
+    width: 95%;
+    margin-bottom: 1rem;
+}
+
+#portfolio img {
+    transition: all 1s;
+}
+
+#portfolio img:hover {
+    transform: scale(1.1);
+}
+
+#profile-image {
+    width: 70%;
+    margin-bottom: 1.5rem;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ HOME SECTION ~~~~~~~~~~~~~~~~~~~~~ */
 
 #home {
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ PORTFOLIO SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+
+#portfolio {
+    padding: 2.5rem 0.5rem;
+}
+
+#portfolio p {
+    padding: .5rem 1.5rem;
+}
+
+.project {
+    margin-bottom: 3.5rem;
+}
+
+.project:last-child {
+    margin-bottom: 0;
+}
+
+
+/* ~~~~~~~~~~~~~~~~~~ EDUCATION SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+
+ul {
+    list-style-type: none;
+}
+
+ul li {
+    margin-bottom: 1rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ CONTACT SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+
+#contact-info {
+    margin-top: 1.5rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~ FOOTER STUFF ~~~~~~~~~~~~~~~~~~~~~ */
+
+
+.hide {
+    display: none;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 1rem 1rem;
+    font-size: 1rem;
+    border-top: 1px solid lightgray;
+    margin-top: 3rem;
+}
+
+#footer-name {
+    font-size: 1rem;
+}
+
+/* OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOld CSS */
+
+/*
+
+footer {
+    padding: 2rem 0.5rem;
+}
+
+#main-nav, header {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+header, #education, #content, footer {
+    padding: 1rem;
+}
+
+#home {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+#home {
+    margin-top: 1rem;
+}
+
+#portfolio-projects {
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #home h2 {
@@ -81,30 +219,6 @@ nav, h2 {
 h3 {
     margin-top: 1rem;
     margin-bottom: .5rem;
-}
-
-a {
-    text-decoration: none;
-    color: #576366;
-}
-
-img {
-    width: 90%;
-}
-
-#profile-image {
-    width: 70%;
-    margin: 2rem auto;
-
-}
-
-#portfolio, #main-nav a {
-    background-color: ghostwhite;
-}
-
-#main-nav a {
-    padding: 0.75rem;
-    margin-top: 0.5rem;
 }
 
 #portfolio {
@@ -125,14 +239,6 @@ img {
     margin: 0 auto 2rem;
 }
 
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    margin-bottom: 1rem;
-}
-
 #education, #contact {
     max-width: 1000px;
     margin-right: auto;
@@ -145,31 +251,6 @@ ul li {
 
 #contact-info {
     margin-top: 2.25rem;
-}
-
-footer {
-    border-top: 1px solid lightgray;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem 0.5rem;
-    font-size: 0.75rem;
-}
-
-#footer-name {
-    text-transform: unset;
-}
-
-.hide {
-    display: none;
-}
-
-#portfolio p, #home h2, #contact p, ul {
-    font-size: 1.2rem;
-}
-
-h1, #footer-name {
-    font-family: 'Poppins', sans-serif;
 }
 
 #home, #education, #contact, footer {
@@ -286,4 +367,4 @@ h1, #footer-name {
     #portfolio p, #home h2, #contact p, ul {
         font-size: 1.5rem;
     }
-}
+} */
