--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ footer {
 
     #main-nav a {
         margin-left: .75rem;
+        padding: unset;
     }
 
     #home {
@@ -299,7 +300,7 @@ footer {
     }
 
     footer, #footer-name {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
     #portfolio h2 {
