Set max width on body
Began reviewing walkthroughs after completing project. Liked max width on body

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ body {
     background-color: whitesmoke;
     color: #576366;
     text-align: center;
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 /* ~~~~~~~~~~~~~~~~~~ LINKS and HEADER ~~~~~~~~~~~~~~~~~~~~~ */
