--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@ body {
     background-color: whitesmoke;
     color: #576366;
     text-align: center;
-    max-width: 1024px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ LINKS and HEADER ~~~~~~~~~~~~~~~~~~~~~ */
 
+/* =============================================================
+                          Links, Header                               
+============================================================== */
 
 #main-nav {
     display: flex;
@@ -48,7 +50,9 @@ h1 {
     font-size: 1.75rem;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ FONT STYLE, WEIGHT, UPPERCASE, AND EXCLUSIONS~~~~~~~~~~~~~~~~~~~~~ */
+/* =============================================================
+      FONT STYLE, WEIGHT, UPPERCASE, AND EXCLUSIONS
+============================================================== */
 
 h1, h2, nav, footer {
     font-weight: 800;
@@ -71,13 +75,13 @@ h1, #footer-name {
     font-family: 'Poppins', sans-serif;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ FONT SIZING ~~~~~~~~~~~~~~~~~~~~~ */
+/* =============================================================
+                        SPACING
+============================================================== */
 
 p, ul, #home h2 {
     font-size: 1.2rem;
 }
-
-/* ~~~~~~~~~~~~~~~~~~ SPACING? ~~~~~~~~~~~~~~~~~~~~~ */
 
 header {
     margin-top: 2.5rem;
@@ -106,7 +110,9 @@ footer h2, #home h2 {
     margin-left: auto;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ IMAGES ~~~~~~~~~~~~~~~~~~~~~ */
+/* =============================================================
+                        IMAGES
+============================================================== */
 
 img {
     width: 95%;
@@ -128,7 +134,9 @@ img {
     margin-left: auto;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ HOME SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+/* =============================================================
+                        HOME SECTION
+============================================================== */
 
 #home {
     display: flex;
@@ -136,7 +144,9 @@ img {
     margin-top: 1rem;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ PORTFOLIO SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+/* =============================================================
+                    PORTFOLIO SECTION
+============================================================== */
 
 #portfolio {
     padding: 2.5rem 0.5rem;
@@ -154,8 +164,9 @@ img {
     margin-bottom: 0;
 }
 
-
-/* ~~~~~~~~~~~~~~~~~~ EDUCATION SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+/* =============================================================
+                     EDUCATION SECTION
+============================================================== */
 
 ul {
     list-style-type: none;
@@ -165,14 +176,19 @@ ul li {
     margin-bottom: 1rem;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ CONTACT SECTION ~~~~~~~~~~~~~~~~~~~~~ */
+
+/* =============================================================
+                        CONTACT SECTION
+============================================================== */
 
 #contact-info {
     margin-top: 1.5rem;
 }
 
-/* ~~~~~~~~~~~~~~~~~~ FOOTER STUFF ~~~~~~~~~~~~~~~~~~~~~ */
 
+/* =============================================================
+                            FOOTER
+============================================================== */
 
 .hide {
     display: none;
