--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
 #main-nav a {
     padding: 0.75rem;
     text-align: center;
+    margin-top: .5rem;
 }
 
 a {
@@ -226,6 +227,11 @@ footer {
     
     #main-nav a {
         background-color: unset;
+        margin-top: 0;
+    }
+
+    h1 {
+        margin-bottom: .7rem;
     }
 
     #home {
