--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
     background-color: whitesmoke;
     color: #576366;
     text-align: center;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -88,7 +88,7 @@ header {
 }
 
 section, footer {
-    margin: 2rem .5rem;
+    margin: 2rem;
     padding: 1rem;
 }
 
@@ -105,7 +105,11 @@ footer h2, #home h2 {
 }
 
 #education, #contact {
-    max-width: 900px;
+    margin: 4rem 2rem;
+}
+
+#education-and-contact-div {
+    max-width: 800px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -141,7 +145,7 @@ img {
 #home {
     display: flex;
     flex-direction: column;
-    margin: 2rem 0;
+    margin: 4rem 0;
     padding: 0 3rem;
 }
 
@@ -196,14 +200,14 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 4rem 1rem;
-    font-size: 1rem;
+    padding: 2.5rem 1rem;
+    font-size: 1.2rem;
     border-top: 1px solid lightgray;
     margin: 2rem 1rem;
 }
 
 #footer-name {
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 /* ===========================================================
@@ -237,7 +241,7 @@ footer {
         justify-content: space-between;
         margin: 5rem 0;
         padding-right: 4rem;
-        padding-left: 3rem;
+        padding-left: 4rem;
     }
 
     #profile-image {
@@ -280,7 +284,8 @@ footer {
     }
 
     footer {
-        padding: 3rem 1rem 1rem;
+        padding: 3rem 1rem;
+        margin: 1rem;
     } 
 }
 
