--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ img {
 #home {
     display: flex;
     flex-direction: column;
-    padding: 0 3rem;
+    padding: 0 .5rem;
 }
 
 /* =============================================================
